--- a/paper.tex
+++ b/paper.tex
@@ -227,6 +227,7 @@
 \subsection{TODO list}
 \calvin{I mentioned this to Charlotte and will meet with her sometime after Arizona to discuss specifically the DL stuff to make sure that it ok. So we could try to have a draft }
 \begin{enumerate}
+	\item It seems like the unitary group case adds factors of the form $\tau\left(\chi\restriction_{\multiplicativegroup{\finiteField}}, \fieldCharacter\right)$ and $\tau\left(\involutionPlusOne{\chi}, \fieldCharacter\right)$, which are related ($\tau\left(\chi\restriction_{\multiplicativegroup{\finiteField}}, \fieldCharacter\right) = \tau\left(\involutionPlusOne{\chi}, \fieldCharacter\right)^2$). The character $\fieldCharacter$ should be of $\finiteField$ and not of $\quadraticExtension$. Should clean up and try to write in a uniform way.
 	\item (Minor) Change terminology of Gauss sums $\dblGaussSumScalar{\pi}{\chi}$ to Jacobi sums and the notation to $J^{\mathrm{dbl}}\left(\pi, \chi\right)$ as they are similar to the Jacobi sums
 	$$J\left(\alpha, \beta\right) = \sum_{\substack{x,y \in \multiplicativegroup{\finiteField}\\
 	x+y = 1}} \alpha\left(x\right) \beta\left(y\right),$$
